Added sudoku link to homepage

--- a/homepage.html
+++ b/homepage.html
@@ -15,6 +15,9 @@
 		<div class = "app_link">
 			<a href = "Scrabble.html">My Scrabble AI</a>
 		</div>
+		<div>
+			<a href="SudokuSolver/SudokuSolver.html">
+		</div>
 	</div>
 	<div class = "paragraph_container">
 	<h2>
