--- a/SudokuSolver/SudokuSolver.html
+++ b/SudokuSolver/SudokuSolver.html
@@ -16,7 +16,9 @@
   <form name="sudoku">
       <ol id = "board">
       <input type="button" value="Solve!" onclick="sudokuSolve()" />
+      <input type="button" value="Clear!" onclick="clearBoard()">
+      <input type="button" value="Sample sudoku" onclick="loadHardPuzzle()">
   </form>
-  <input type="button" value="Clear!" onclick="clearBoard()">
+  
   <input type = "text" id = "timer">
 </body>
