Moved link inline

--- a/homepage.html
+++ b/homepage.html
@@ -13,10 +13,7 @@
 	</h1>
 	<div class = "links">
 		<div class = "app_link">
-			<a href = "Scrabble.html">My Scrabble AI (not up yet)</a>
-		</div>
-		<div class = "app_link">
-			<a href="SudokuSolver/SudokuSolver.html">Sudoku Solver</a>
+			<a href = "Scrabble.html">My Scrabble AI (not up yet)</a> || <a href="SudokuSolver/SudokuSolver.html">Sudoku Solver</a>
 		</div>
 	</div>
 	<div class = "paragraph_container">
